Config Cluster in appsettings.json

--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -8,7 +8,16 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Clusters": {
-      
+        "microservices-cluster": {
+          "Destinations": {
+            "product": {
+              "Address": "http://product_api"
+            },
+            "posting": {
+              "Address": "http://posting_api"
+            }
+          }
+        }
     }
   }
 }
